Check3d (#65)
* Create ComputeEngineIntegrationTest.java

* Update ComputeEngineIntegrationTest.java

* added integration to checkpointtests

* passing checkpoint3

* Update ComputeEngineIntegrationTest.java