@@ -2,14 +2,15 @@ package integration;
 
 import computeengineapi.ComputeEngineAPI;
 import computeengineapi.ComputeEngineImpl;
+import usercomputeapi.DataSource;
 import usercomputeapi.ComputeRequest;
 import usercomputeapi.ComputeResponse;
-import usercomputeapi.DataSource;
 import usercomputeapi.UserComputeAPI;
 import usercomputeapi.UserComputeImpl;
 
 import org.junit.jupiter.api.Test;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+
 import java.util.Arrays;
 import java.util.List;
 
@@ -17,26 +18,26 @@ public class ComputeEngineIntegrationTest {
 
     @Test
     public void testIntegration() {
-//      ProcessAPI implementation
-        TestStorageComputeAPIImpl dataStore = new TestStorageComputeAPIImpl(Arrays.asList(1, 10, 25));
+//      create test input and output
+        TestInput input = new TestInput(Arrays.asList(1, 10, 25));
+        TestOutput output = new TestOutput();
+        TestDataStore dataStore = new TestDataStore(input, output);
 
-//      ConceptualAPI
+//      implementation
         ComputeEngineAPI computeEngine = new ComputeEngineImpl();
 
-//      NetworkAPI
         UserComputeAPI userCompute = new UserComputeImpl();
 
-//      DataSource for ComputeRequest
+        // DataSource for ComputeRequest
         DataSource source = () -> 100;
         ComputeRequest request = new ComputeRequest(source, null);
 
-//      compute engine through input
         for (Integer i : dataStore.readInput()) {
             int result = computeEngine.computeSum(List.of(i));
-            dataStore.writeOutput(List.of(result));
+            dataStore.writeOut(List.of(String.valueOf(result)));
         }
 
-        List<String> expected = List.of("0", "0", "0");
-        assertEquals(expected, dataStore.getTestOutput());
+        List<String> expected = Arrays.asList("0", "0", "0");
+        assertEquals(expected, output.getOutput());
     }
 }
